# FYS5419_Project_1

./: .gitignore  FYS5419_Project_1_add_code.sh  FYS5419_Project_1_plot_style_update.sh  FYS5419_Project_1_polish_update.sh  FYS5419_Project_1_python_only_polish.py  Makefile  README.md  SETUP_COMMANDS.md  SETUP_GUIDE.md  environment.yml  pyproject.toml  pytest.ini  requirements-quantum.txt  requirements.txt
backup_before_project_code_20260601_030030/: .gitignore  Makefile  README.md  pyproject.toml
backup_before_project_code_20260601_030030/report/: main.tex
backup_before_project_code_20260601_030030/src/fys5419_project1/: __init__.py  hamiltonians.py  vqe.py
docs/: FYS5419_Project_1_assignment.tex  README.md  ai_usage_declaration_template.md  logbook.md  project_checklist.md  terminal_setup_guide.md
notebooks/: 00_project_overview.ipynb  part_a_gates_bell_states_measurements_and_entropy.ipynb  part_b_classical_one_qubit_hamiltonian.ipynb  part_c_one_qubit_vqe.ipynb  part_d_classical_two_qubit_hamiltonian_and_entanglement.ipynb  part_e_two_qubit_vqe.ipynb  part_f_lipkin_classical_diagonalization.ipynb  part_g_lipkin_vqe.ipynb
references/: source_links.md
report/: README.md  ai_declaration.tex  main.tex  project1_report.tex  references.bib
scripts/: compile_report.py  fetch_course_sources.py  fetch_course_sources.sh  make_report_figures.py  restricted_ansatz_check.py  run_all.py  run_part_a.py  run_part_b.py  run_part_c.py  run_part_d.py  run_part_e.py  run_part_f.py  run_part_g.py
tests/: test_hamiltonians_vqe.py  test_imports.py  test_no_placeholders.py  (+4 more)
(+45 files in other folders)
